// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`splitOnHeader splitOnHeader:false 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

ex:file dot:wikipath \\"file.md\\" ;
	dot:external <https://example-2.com/>, <https://example-2.com/something>, <http://example.com>, <https://example2.com> ;
	a dot:Note ;
	<http://my-vault.org/property/has%20image> _:b41 ;
	dot:related [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1.md\\" ;
	], [
		dot:wikipath \\"link 1 \\" ;
	], [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"image.png\\" ;
	], [
		dot:wikipath \\"protocol\\" ;
	] ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	], <http://example.org/file/alice>, <http://example.org/file/alison> ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" ;
	<http://my-vault.org/property/foaf:knows> _:b64, _:b65 ;
	<http://my-vault.org/property/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^2\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^3 \\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Unknown\\" ;
		dot:selector \\"^1\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b54 <http://my-vault.org/property/foaf:knows> _:b55 .

<http://example.org/file/alice> dot:wikipath \\"file.md\\" ;
	dot:selector \\"Alice\\" ;
	<http://my-vault.org/property/foaf:knows> _:b66, _:b68 ;
	schema:name \\"Alice\\" .

<http://example.org/file/alison> dot:wikipath \\"file.md\\" ;
	dot:selector \\"Alison\\" ;
	<http://my-vault.org/property/foaf:knows> _:b67, _:b69 ;
	schema:name \\"Alison\\" .

"
`;

exports[`splitOnHeader splitOnHeader:true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

ex:file dot:wikipath \\"file.md\\" ;
	dot:external <https://example-2.com/>, <https://example-2.com/something>, <http://example.com>, <https://example2.com> ;
	a dot:Note ;
	<http://my-vault.org/property/has%20image> _:b41 ;
	dot:related [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1.md\\" ;
	], [
		dot:wikipath \\"link 1 \\" ;
	], [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"image.png\\" ;
	], [
		dot:wikipath \\"protocol\\" ;
	] ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	], <http://example.org/file/alice>, <http://example.org/file/alison>, [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"People\\" ;
		dot:contains [
			dot:wikipath \\"file.md\\" ;
			dot:selector \\"Alice\\" ;
			<http://my-vault.org/property/age> \\"37\\" ;
			<http://my-vault.org/property/name> \\"Alice\\" ;
		], [
			dot:wikipath \\"file.md\\" ;
			dot:selector \\"Bob\\" ;
			<http://my-vault.org/property/age> \\"42\\" ;
			<http://my-vault.org/property/name> \\"Bob\\" ;
		], [
			dot:wikipath \\"file.md\\" ;
			dot:selector \\"Charlie\\" ;
			<http://my-vault.org/property/name> \\"Charlie\\" ;
		] ;
	] ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" ;
	<http://my-vault.org/property/foaf:knows> _:b64, _:b65 ;
	<http://my-vault.org/property/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^2\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^3 \\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Unknown\\" ;
		dot:selector \\"^1\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b54 <http://my-vault.org/property/foaf:knows> _:b55 .

<http://example.org/file/alice> dot:wikipath \\"file.md\\" ;
	dot:selector \\"Alice\\" ;
	<http://my-vault.org/property/foaf:knows> _:b66, _:b68 ;
	schema:name \\"Alice\\" .

<http://example.org/file/alison> dot:wikipath \\"file.md\\" ;
	dot:selector \\"Alison\\" ;
	<http://my-vault.org/property/foaf:knows> _:b67, _:b69 ;
	schema:name \\"Alison\\" .

"
`;

exports[`splitOnHeader splitOnHeader:true addLabels:true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

ex:file dot:wikipath \\"file.md\\" ;
	dot:external <https://example-2.com/>, <https://example-2.com/something>, <http://example.com>, <https://example2.com> ;
	a dot:Note ;
	<http://my-vault.org/property/has%20image> _:b41 ;
	dot:related [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1.md\\" ;
	], [
		dot:wikipath \\"link 1 \\" ;
	], [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"image.png\\" ;
	], [
		dot:wikipath \\"protocol\\" ;
	] ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	], <http://example.org/file/alice>, <http://example.org/file/alison>, [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"People\\" ;
		dot:contains [
			dot:wikipath \\"file.md\\" ;
			dot:selector \\"Alice\\" ;
			<http://my-vault.org/property/age> \\"37\\" ;
			<http://my-vault.org/property/name> \\"Alice\\" ;
		], [
			dot:wikipath \\"file.md\\" ;
			dot:selector \\"Bob\\" ;
			<http://my-vault.org/property/age> \\"42\\" ;
			<http://my-vault.org/property/name> \\"Bob\\" ;
		], [
			dot:wikipath \\"file.md\\" ;
			dot:selector \\"Charlie\\" ;
			<http://my-vault.org/property/name> \\"Charlie\\" ;
		] ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"People\\" ;
		dot:contains [
			dot:wikipath \\"file.md\\" ;
			dot:selector \\"Alice\\" ;
			<http://my-vault.org/property/age> \\"37\\" ;
			<http://my-vault.org/property/name> \\"Alice\\" ;
			schema:name \\"Alice\\" ;
		], [
			dot:wikipath \\"file.md\\" ;
			dot:selector \\"Bob\\" ;
			<http://my-vault.org/property/age> \\"42\\" ;
			<http://my-vault.org/property/name> \\"Bob\\" ;
			schema:name \\"Bob\\" ;
		], [
			dot:wikipath \\"file.md\\" ;
			dot:selector \\"Charlie\\" ;
			<http://my-vault.org/property/name> \\"Charlie\\" ;
			schema:name \\"Charlie\\" ;
		] ;
		schema:name \\"People\\" ;
	] ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" ;
	<http://my-vault.org/property/foaf:knows> _:b64, _:b65 ;
	<http://my-vault.org/property/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^2\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^3 \\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Unknown\\" ;
		dot:selector \\"^1\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b54 <http://my-vault.org/property/foaf:knows> _:b55 .

<http://example.org/file/alice> dot:wikipath \\"file.md\\" ;
	dot:selector \\"Alice\\" ;
	<http://my-vault.org/property/foaf:knows> _:b66, _:b68 ;
	schema:name \\"Alice\\" .

<http://example.org/file/alison> dot:wikipath \\"file.md\\" ;
	dot:selector \\"Alison\\" ;
	<http://my-vault.org/property/foaf:knows> _:b67, _:b69 ;
	schema:name \\"Alison\\" .

"
`;

exports[`splitOnHeader splitOnHeader:true includeWikiPaths:true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

ex:file dot:wikipath \\"file.md\\" ;
	dot:external <https://example-2.com/>, <https://example-2.com/something>, <http://example.com>, <https://example2.com> ;
	a dot:Note ;
	<http://my-vault.org/property/has%20image> _:b41 ;
	dot:related [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1.md\\" ;
	], [
		dot:wikipath \\"link 1 \\" ;
	], [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"image.png\\" ;
	], [
		dot:wikipath \\"protocol\\" ;
	] ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	], <http://example.org/file/alice>, <http://example.org/file/alison>, [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"People\\" ;
		dot:contains [
			dot:wikipath \\"file.md\\" ;
			dot:selector \\"Alice\\" ;
			<http://my-vault.org/property/age> \\"37\\" ;
			<http://my-vault.org/property/name> \\"Alice\\" ;
		], [
			dot:wikipath \\"file.md\\" ;
			dot:selector \\"Bob\\" ;
			<http://my-vault.org/property/age> \\"42\\" ;
			<http://my-vault.org/property/name> \\"Bob\\" ;
		], [
			dot:wikipath \\"file.md\\" ;
			dot:selector \\"Charlie\\" ;
			<http://my-vault.org/property/name> \\"Charlie\\" ;
		] ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"People\\" ;
		dot:contains [
			dot:wikipath \\"file.md\\" ;
			dot:selector \\"Alice\\" ;
			<http://my-vault.org/property/age> \\"37\\" ;
			<http://my-vault.org/property/name> \\"Alice\\" ;
			schema:name \\"Alice\\" ;
		], [
			dot:wikipath \\"file.md\\" ;
			dot:selector \\"Bob\\" ;
			<http://my-vault.org/property/age> \\"42\\" ;
			<http://my-vault.org/property/name> \\"Bob\\" ;
			schema:name \\"Bob\\" ;
		], [
			dot:wikipath \\"file.md\\" ;
			dot:selector \\"Charlie\\" ;
			<http://my-vault.org/property/name> \\"Charlie\\" ;
			schema:name \\"Charlie\\" ;
		] ;
		schema:name \\"People\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"People\\" ;
		dot:contains [
			dot:wikipath \\"file.md\\" ;
			dot:selector \\"Alice\\" ;
			<http://my-vault.org/property/age> \\"37\\" ;
			<http://my-vault.org/property/name> \\"Alice\\" ;
		], [
			dot:wikipath \\"file.md\\" ;
			dot:selector \\"Bob\\" ;
			<http://my-vault.org/property/age> \\"42\\" ;
			<http://my-vault.org/property/name> \\"Bob\\" ;
		], [
			dot:wikipath \\"file.md\\" ;
			dot:selector \\"Charlie\\" ;
			<http://my-vault.org/property/name> \\"Charlie\\" ;
		] ;
	] ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" ;
	<http://my-vault.org/property/foaf:knows> _:b64, _:b65 ;
	<http://my-vault.org/property/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^2\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^3 \\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Unknown\\" ;
		dot:selector \\"^1\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b54 <http://my-vault.org/property/foaf:knows> _:b55 .

<http://example.org/file/alice> dot:wikipath \\"file.md\\" ;
	dot:selector \\"Alice\\" ;
	<http://my-vault.org/property/foaf:knows> _:b66, _:b68 ;
	schema:name \\"Alice\\" .

<http://example.org/file/alison> dot:wikipath \\"file.md\\" ;
	dot:selector \\"Alison\\" ;
	<http://my-vault.org/property/foaf:knows> _:b67, _:b69 ;
	schema:name \\"Alison\\" .

"
`;

exports[`splitOnId splitOnId:false 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

ex:file dot:wikipath \\"file.md\\" ;
	dot:external <https://example-2.com/>, <https://example-2.com/something>, <http://example.com>, <https://example2.com> ;
	a dot:Note ;
	<http://my-vault.org/property/has%20image> _:b41 ;
	dot:related [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1.md\\" ;
	], [
		dot:wikipath \\"link 1 \\" ;
	], [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"image.png\\" ;
	], [
		dot:wikipath \\"protocol\\" ;
	] ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	] ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" ;
	<http://my-vault.org/property/foaf:knows> _:b64, _:b65 ;
	<http://my-vault.org/property/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^2\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^3 \\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Unknown\\" ;
		dot:selector \\"^1\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b54 <http://my-vault.org/property/foaf:knows> _:b55 .

"
`;

exports[`splitOnId splitOnId:true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

ex:file dot:wikipath \\"file.md\\" ;
	dot:external <https://example-2.com/>, <https://example-2.com/something>, <http://example.com>, <https://example2.com> ;
	a dot:Note ;
	<http://my-vault.org/property/has%20image> _:b41 ;
	dot:related [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1.md\\" ;
	], [
		dot:wikipath \\"link 1 \\" ;
	], [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"image.png\\" ;
	], [
		dot:wikipath \\"protocol\\" ;
	] ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	], <http://example.org/file/alice>, <http://example.org/file/alison> ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" ;
	<http://my-vault.org/property/foaf:knows> _:b64, _:b65 ;
	<http://my-vault.org/property/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^2\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^3 \\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Unknown\\" ;
		dot:selector \\"^1\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b54 <http://my-vault.org/property/foaf:knows> _:b55 .

<http://example.org/file/alice> dot:wikipath \\"file.md\\" ;
	dot:selector \\"Alice\\" ;
	<http://my-vault.org/property/foaf:knows> _:b66 .

<http://example.org/file/alison> dot:wikipath \\"file.md\\" ;
	dot:selector \\"Alison\\" ;
	<http://my-vault.org/property/foaf:knows> _:b67 .

"
`;

exports[`splitOnId splitOnId:true addLabels:true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

ex:file dot:wikipath \\"file.md\\" ;
	dot:external <https://example-2.com/>, <https://example-2.com/something>, <http://example.com>, <https://example2.com> ;
	a dot:Note ;
	<http://my-vault.org/property/has%20image> _:b41 ;
	dot:related [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1.md\\" ;
	], [
		dot:wikipath \\"link 1 \\" ;
	], [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"image.png\\" ;
	], [
		dot:wikipath \\"protocol\\" ;
	] ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	], <http://example.org/file/alice>, <http://example.org/file/alison> ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" ;
	<http://my-vault.org/property/foaf:knows> _:b64, _:b65 ;
	<http://my-vault.org/property/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^2\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^3 \\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Unknown\\" ;
		dot:selector \\"^1\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b54 <http://my-vault.org/property/foaf:knows> _:b55 .

<http://example.org/file/alice> dot:wikipath \\"file.md\\" ;
	dot:selector \\"Alice\\" ;
	<http://my-vault.org/property/foaf:knows> _:b66, _:b68 ;
	schema:name \\"Alice\\" .

<http://example.org/file/alison> dot:wikipath \\"file.md\\" ;
	dot:selector \\"Alison\\" ;
	<http://my-vault.org/property/foaf:knows> _:b67, _:b69 ;
	schema:name \\"Alison\\" .

"
`;

exports[`splitOnTag splitOnTag:false 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

ex:file dot:wikipath \\"file.md\\" ;
	dot:external <https://example-2.com/>, <https://example-2.com/something>, <http://example.com>, <https://example2.com> ;
	a dot:Note ;
	<http://my-vault.org/property/has%20image> _:b41 ;
	dot:related [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1.md\\" ;
	], [
		dot:wikipath \\"link 1 \\" ;
	], [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"image.png\\" ;
	], [
		dot:wikipath \\"protocol\\" ;
	] ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3> ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" ;
	<http://my-vault.org/property/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^2\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^3 \\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Unknown\\" ;
		dot:selector \\"^1\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b54 <http://my-vault.org/property/foaf:knows> _:b55 .

"
`;

exports[`splitOnTag splitOnTag:true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

ex:file dot:wikipath \\"file.md\\" ;
	dot:external <https://example-2.com/>, <https://example-2.com/something>, <http://example.com>, <https://example2.com> ;
	a dot:Note ;
	<http://my-vault.org/property/has%20image> _:b41 ;
	dot:related [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1.md\\" ;
	], [
		dot:wikipath \\"link 1 \\" ;
	], [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"image.png\\" ;
	], [
		dot:wikipath \\"protocol\\" ;
	] ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
	] ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" ;
	<http://my-vault.org/property/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^2\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^3 \\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Unknown\\" ;
		dot:selector \\"^1\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b54 <http://my-vault.org/property/foaf:knows> _:b55 .

"
`;

exports[`splitOnTag splitOnTag:true addLabels:true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

ex:file dot:wikipath \\"file.md\\" ;
	dot:external <https://example-2.com/>, <https://example-2.com/something>, <http://example.com>, <https://example2.com> ;
	a dot:Note ;
	<http://my-vault.org/property/has%20image> _:b41 ;
	dot:related [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1.md\\" ;
	], [
		dot:wikipath \\"link 1 \\" ;
	], [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"image.png\\" ;
	], [
		dot:wikipath \\"protocol\\" ;
	] ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:wikipath \\"file.md\\" ;
		dot:selector \\"Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	] ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" ;
	<http://my-vault.org/property/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^2\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^3 \\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Unknown\\" ;
		dot:selector \\"^1\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b54 <http://my-vault.org/property/foaf:knows> _:b55 .

"
`;

exports[`toRDF BlockIds 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

ex:file dot:wikipath \\"file.md\\" ;
	dot:external <https://example-2.com/>, <https://example-2.com/something>, <http://example.com>, <https://example2.com> ;
	a dot:Note ;
	<http://my-vault.org/property/has%20image> _:b41 ;
	dot:related [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1.md\\" ;
	], [
		dot:wikipath \\"link 1 \\" ;
	], [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"image.png\\" ;
	], [
		dot:wikipath \\"protocol\\" ;
	] ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3> ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\" .

<http://example.org/file/1> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^2\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^3 \\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Unknown\\" ;
		dot:selector \\"^1\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

"
`;

exports[`toRDF Inline fields 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

ex:file dot:wikipath \\"file.md\\" ;
	dot:external <https://example-2.com/>, <https://example-2.com/something>, <http://example.com>, <https://example2.com> ;
	a dot:Note ;
	<http://my-vault.org/property/has%20image> _:b41 ;
	dot:related [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1.md\\" ;
	], [
		dot:wikipath \\"link 1 \\" ;
	], [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"image.png\\" ;
	], [
		dot:wikipath \\"protocol\\" ;
	] ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3> ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" .

<http://example.org/file/1> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^2\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^3 \\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Unknown\\" ;
		dot:selector \\"^1\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b54 <http://my-vault.org/property/foaf:knows> _:b55 .

"
`;

exports[`toRDF Links 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

ex:file dot:wikipath \\"file.md\\" ;
	dot:external <https://example-2.com/>, <https://example-2.com/something>, <http://example.com>, <https://example2.com> ;
	a dot:Note ;
	<http://my-vault.org/property/has%20image> _:b41 ;
	dot:related [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1.md\\" ;
	], [
		dot:wikipath \\"link 1 \\" ;
	], [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"image.png\\" ;
	], [
		dot:wikipath \\"protocol\\" ;
	] .

"
`;

exports[`toRDF Outline 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

ex:file dot:wikipath \\"file.md\\" ;
	dot:external <https://example-2.com/>, <https://example-2.com/something>, <http://example.com>, <https://example2.com> ;
	a dot:Note ;
	<http://my-vault.org/property/has%20image> _:b41 ;
	dot:related [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1.md\\" ;
	], [
		dot:wikipath \\"link 1 \\" ;
	], [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"image.png\\" ;
	], [
		dot:wikipath \\"protocol\\" ;
	] .

"
`;

exports[`toRDF People 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

ex:file dot:wikipath \\"file.md\\" ;
	dot:external <https://example-2.com/>, <https://example-2.com/something>, <http://example.com>, <https://example2.com> ;
	a dot:Note ;
	<http://my-vault.org/property/has%20image> _:b41 ;
	dot:related [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1.md\\" ;
	], [
		dot:wikipath \\"link 1 \\" ;
	], [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"image.png\\" ;
	], [
		dot:wikipath \\"protocol\\" ;
	] ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3> ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\" .

<http://example.org/file/1> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^2\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^3 \\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Unknown\\" ;
		dot:selector \\"^1\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

"
`;

exports[`toRDF YAML-like 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

ex:file dot:wikipath \\"file.md\\" ;
	dot:external <https://example-2.com/>, <https://example-2.com/something> ;
	a dot:Note .

"
`;

exports[`toRDF Yaml 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

ex:file dot:wikipath \\"file.md\\" ;
	dot:external <https://example-2.com/>, <https://example-2.com/something>, <http://example.com>, <https://example2.com> ;
	a dot:Note ;
	<http://my-vault.org/property/has%20image> _:b41 ;
	dot:related [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1\\" ;
	], [
		dot:wikipath \\"/full/path/link 1.md\\" ;
	], [
		dot:wikipath \\"link 1 \\" ;
	], [
		dot:wikipath \\"link 1\\" ;
	], [
		dot:wikipath \\"image.png\\" ;
	], [
		dot:wikipath \\"protocol\\" ;
	] ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3> ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] .

<http://example.org/file/1> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^2\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Bob Details\\" ;
		dot:selector \\"^3 \\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:wikipath \\"file.md\\" ;
	dot:related [
		dot:wikipath \\"Unknown\\" ;
		dot:selector \\"^1\\" ;
	] ;
	dot:selector \\"Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

"
`;

exports[`toRDF code fence 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

ex:file dot:wikipath \\"file.md\\" ;
	dot:external <https://example-2.com/>, <https://example-2.com/something> ;
	a dot:Note .

"
`;
